# simplegames

./: .gitignore  LICENSE  README.md  chicken_rotate.html
chinese-chess/chinese-chess-bevy-rs/: .gitignore  Cargo.toml  README.md  build-with-dynamic-bevy.sh
chinese-chess/chinese-chess-bevy-rs/src/: main.rs
gomoku/gomoku-gtk-rs/: Cargo.toml
gomoku/gomoku-gtk-rs/src/: main.rs
gomoku/gomoku-rsweb/: Cargo.toml
gomoku/gomoku-rsweb/src/: 404.html  game.rs  index.html  main.rs  multiplayer.html  webservice.rs
guesses/: guess_1.py  guess_2.py
minesweeper/: minesweeper.cc
minesweeper/minesweeper-iced-rs/: Cargo.toml  README.md
minesweeper/minesweeper-iced-rs/src/: main.rs
snake/: snake-tk.py  snake.cc
snake/snake-rs/: .gitignore  Cargo.toml
snake/snake-rs/src/: game.rs  main.rs
sudoku/: sudoku.cc  sudoku.py
tetris/tetris-rs/: .gitignore  Cargo.toml  README.md
tetris/tetris-rs/src/: grid.rs  main.rs  render.rs
x2048/: 2048.cc  Makefile
