[package]
name = "gomoku-gtk-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.17.10"
gtk4 = "0.6.6"
once_cell = "1.18.0"
rand = "0.8.5"

[profile.release]
lto = true
strip = true
opt-level = 3
