[package]
name = "gomoku-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix]
version = "*"

[dependencies.actix-web-actors]
version = "4"

[dependencies.actix-web]
version = "4"
features = [
    "macros",
]

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
    "serde"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[dependencies.serde_json]
version = "1"
