[package]
name = "minesweeper-iced-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rand = "0.8.5"
vec2d = "0.4.0"

[dependencies.iced]
version = "0.9.0"
default-features = false
features = ["canvas", "default_system_font", "glow"]
